fixed some spacing

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
   z-index: 999;
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
+  border-bottom: 1px var(--color-text-secondary) solid;
 }
 
 .logo {
@@ -108,7 +109,7 @@ main h1::after {
   content: "Web developer | UI/UX designer";
   display: block;
   position: absolute;
-  top: 100%;
+  top: 105%;
   color: var(--color-accent);
   font-size: 0.7rem;
   text-transform: uppercase;
